--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,11 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: daily
+      interval: "monthly"
+      time: "10:00"
+
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: daily
+      interval: "monthly"
+      time: "10:00"
