--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@actions/io": "1.1.3"
   },
   "devDependencies": {
+    "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "esbuild": "0.20.1",
